--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Django==3.1.*
-environs[django]==9.3.0
-Pillow==10.0.0  # required by Windows environment
-more-itertools==8.6.0
+Django==4.2.5
+django-debug-toolbar==4.2.0
+more-itertools==10.1.0
+environs==9.5.0
+Pillow==10.0.1
